2004-01-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Add checks for pty stuff
		
	* libgnomevfs/gnome-vfs-standard-callbacks.h:
	* modules/http-method.c: (invoke_callback_basic_authn):
	* modules/smb-method.c: (invoke_full_auth):
	Add saving_supported flag
	
	* modules/ssh-method.c: (ssh_connect):
	
	* modules/Makefile.am:
	* modules/default-modules.conf:
	* modules/sftp-method.c:
	* modules/sftp.h:
	* modules/pty-open.[ch]:
	Added sftp method by Bradford Hovinen, with a few
	fixes and new features.
	pty-open.c is based on pty.c from vte.

	* libgnomevfs/xdgmimeglob.c: (_xdg_glob_hash_free_nodes):
	Fix crash on shutdown
	
2004-01-08  Thomas Cataldo  <tom@aliacom.fr>

	* programs/gnomevfs-info.c: Fixed a memory leak

2004-01-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/Makefile.am:
	* modules/smb-method.c: 
	* modules/smb-module.conf:
	Add smb module, used to be in gnome-vfs-extras.

Wed Jan  7 13:36:53 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/mime*: use the xdg mime system.

2004-01-07  Martin Wehner  <martin.wehner@epost.de>

	* modules/file-method.c (rename_helper):
	Enable capitalization changes on vfat filesystems by
	renaming via a temp file name. (#130159) 

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* libgnomevfs/gnome-vfs-drive.h: Fix the casting and type-testing macros.

	* libgnomevfs/gnome-vfs-volume.h: Likewise.

=== gnome-vfs 2.5.4.1 ===

2003-12-28  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (EXTRA_DIST):
	Add OrigTree.pm

=== gnome-vfs 2.5.4 ===

2003-12-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update for 2.5.4

2003-12-19  Christian Neumair  <chris@gnome-de.org>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	* schemas/system_http_proxy.schemas.in:
	Introduce some consistency/simplification both in terminology and
	punctuation (#129492, #129493, #129497, #129498).

2003-12-18  Alexander Larsson  <alexl@redhat.com>
